--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "forkify",
   "version": "1.0.0",
+  "browserslist": "last 2 versions, > 0.5% and ie >= 11",
   "description": "Recipe application",
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist"
+    "build": "parcel build index.html --public-url ./"
   },
   "author": "Christian Meier",
   "license": "ISC",
