--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "core-js": "^3.36.0",
-    "fractional": "^1.0.0",
+    "number2fraction": "^1.1.1",
     "regenerator-runtime": "^0.14.1"
   }
 }
